infra/k8s/networking/ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inkwell-dev-ingress
  namespace: inkwell
spec:
  ingressClassName: nginx
  rules:
    - host: inkwell.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
